<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnFillSongList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/obtenerCanciones"
        app:layout_constraintEnd_toStartOf="@+id/btnRemovePost"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btnRemovePost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/borrarCancion"
        app:layout_constraintEnd_toStartOf="@+id/btnModifyPost"
        app:layout_constraintStart_toEndOf="@+id/btnFillSongList"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_songs"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFillSongList" />



    <Button
        android:id="@+id/btnModifyPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modificarCancion"
        app:layout_constraintStart_toEndOf="@+id/btnRemovePost"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>